# ImageViewer

./: CMakeLists.txt  README.md
BasicSetup/: CMakeLists.txt  ImageViewerX.drawio
BasicSetup/include/: AddAnnotationUndoRedo.h  Annotation.h  AnnotationEvent.h  AnnotationHandler.h  AnnotationModel.h  AnnotationSerializable.h  AnnotationTranslationUndoRedo.h  AnnotationUndoRedo.h  DataManager.h  DataObject.h  DeleteHandler.h  Image.h  ImageEvent.h  ImageModel.h  ImageProcessingHandler.h  ImageProvider.h  ImageSerializer.h  LoadHandler.h  ObserverPattern.h  RemoveAnnotationUndoRedo.h  ResetAnnotationHandler.h  ResetAnnotationUndoRedo.h  SaveHandler.h  SelectUndoRedo.h  Serializable.h  Serializer.h  SingletonPattern.h  StartupHandler.h  UniqueKeyGenerator.h
BasicSetup/resource/: icon.qrc  qml.qrc
BasicSetup/resource/qml/: EditSubActions.qml  HeaderActions.qml  ImageDelegate.qml  ImageViewer.qml  ShareImageSubActions.qml  SmartPanel.qml  SplitViewer.qml
BasicSetup/src/: AnnotationHandler.cpp  AnnotationModel.cpp  BrowseImage.qml  EditSubActions.qml  HeaderActions.qml  ImageBrowseSelectionGrid.qml  ImageDelegate.qml  ImageModel.cpp  ImageProcessingHandler.cpp  ImageViewer.qml  ShareImageSubActions.qml  SmartPanel.qml  SplitViewer.qml  main.cpp  main.qml
BasicSetup/src/qml/: HeaderActions.qml  ImageBrowseSelectionGrid.qml  SmartPanel.qml
